--- a/3_Assessment.Rmd
+++ b/3_Assessment.Rmd
@@ -5,11 +5,11 @@
 #Assessment
 
 ##General Model Specifications and Assumptions
-Stock Synthesis v3.30.03.05 was used to estimate the parameters in the model. R4SS, revision 1.27.0, along with R version 3.3.2 were used to investigate and plot model fits. A summary of the data sources used in the model (details discussed above) is shown in Figure \ref{fig:data_plot}.
+Stock Synthesis version 3.30.03.05 was used to estimate the parameters in the model. R4SS, revision 1.27.0, along with R version 3.3.2 were used to investigate and plot model fits. A summary of the data sources used in the model (details discussed above) is shown in Figure \ref{fig:data_plot}.
 
 Stock Synthesis has many options when setting up a model and the assessment model for `r spp` was set up in the following manner.
 
-###Changes between the 2011 assessment model and current model
+###Changes Between the 2011 Assessment Model and Current Model
 The current model for `r spp` has many made many similar assumptions to the 2011 assessment but differs in some key ways.  This assessment disaggregated the fleets into a trawl/other gear, At-sea hake, historical foreign fleet, and research fleets.  The previous assessment implemented a single fleet where removal from all sources were aggregated together.  The separating of fleets applied in this assessment allowed for differing assumptions regarding current and historical discarding practices.  Although there are no compositional data available from the foreign fleet, it is assumed that very little discarding to no discarding of fish occurred.  Additionally, the At-sea hake fishery removals are represent both discarded and retained fish and hence an additional discard rate would not be appropriate.  Similar logic was applied in regard to survey removals.  
 
 The historical landings used in the model differs from those used in 2011.  The assessment includes the first state provided historical reconstruction landings for Washington state.  The historical reconstruction has removals starting in 1916 and have larger removals in the 1940s relative to those used in 2011 (Figure \ref{fig:Catch_Compare}).  Given the increase in historical removals prior to 1940, the 2011 model starting year, the starting year for modeling the stock was revised to `r Dat_start_mod1`, the first year `r spp` landings exceeded 1 mt.  Explorations were conducted relative to the model starting year and no differences were found between the `r Dat_start_mod1` start year compared to starting the model in 1892, the first record of `r spp` landings between California, Oregon, and Washington catch data.
@@ -20,7 +20,7 @@ All fishery-independent indices have been reevaluated for this assessment using 
 
 Maturity and fecundity were updated for this assessment based upon new research. Fecundity for `r spp` used in this assessment was base on a reevaluation of the fecundity of West Coast rockfish by Dick et al. [-@dick_meta-analysis_2017], updating the previous fecundity estimates used in the 2011 assessment [@dick_modeling_2009] (Figure \ref{fig:fecundity}).  Maturity in this assessment was based on examination of 537 fish samples which were used to estimate functional maturity, an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (Melissa Head, personal communication, NWFSC, NOAA).  The updated maturity curve was based on maturity-at-length where the previous estimates used in 2011 were based on maturity-at-age (Figure \ref{fig:mat_compare}). 
 
-In this assessment, the beta prior developed from a meta-analysis of West Coast groundfish was updated to the 2017 value (J. Thorson, pers comm, NWFSC, NOAA) in preliminary models, with steepness fixed at an alternative value in the final base model.  Additionally, the prior for natural mortality was updated based on analysis conducted by Owen Hamel (personal communication, NWFSC, NOAA), where female and male natural mortality fixed at the prior median.
+In this assessment, the beta prior developed from a meta-analysis of West Coast groundfish was updated to the 2017 value (James Thorson, personal communication, NWFSC, NOAA) in preliminary models, with steepness fixed at an alternative value in the final base model.  Additionally, the prior for natural mortality was updated based on analysis conducted by Owen Hamel (personal communication, NWFSC, NOAA), where female and male natural mortality fixed at the prior median.
 
 
 ###Summary of Fleets and Areas
@@ -56,7 +56,7 @@ The prior for steepness ($h$) assumes a beta distribution with parameters based 
 
 ###Data Weighting
 
-The base case was weighted such that the various data sources were mostly consistent with each other in terms of the relationship between input and effective sample sizes. Length and age-at-length compositions from the NWFSC shelf-slope survey were fit along with length and marginal age compositions from the fishery and other survey fleets. Length data started with a sample size determined from the equation listed in \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey} (survey data) and Section \ref{fishery-length-and-age-data} (fishery data). Age-at-length data assumed that each age was a random sample within the length bin and started with a sample size equal to the number of fish in that length bin.  However, the 2016 NWFSC shelf-slope age-at-length data was variable compared to previous years for both males and females relative to all other years with observed fish being larger at age.  Due to the increased variability within this data year, the effective sample size for this year was reduced to 50% of the number of fish within each length-age bin.  
+The base case was weighted such that the various data sources were mostly consistent with each other in terms of the relationship between input and effective sample sizes. Length and age-at-length compositions from the NWFSC shelf-slope survey were fit along with length and marginal age compositions from the fishery and other survey fleets. Length data started with a sample size determined from the equation listed in Sections \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey} (survey data) and \ref{fishery-length-and-age-data} (fishery data). Age-at-length data assumed that each age was a random sample within the length bin and started with a sample size equal to the number of fish in that length bin.  However, the 2016 NWFSC shelf-slope age-at-length data was variable compared to previous years for both males and females relative to all other years with observed fish being larger at age.  Model exploration determined that the model was more sensitive than would be reasonably expected to the inclusion of this data year.  Due to the increased variability within this data year and the mode's sensitivity, the effective sample size for this year was reduced to 50% of the number of fish within each length-age bin.  
 
 One extra variability parameter was estimated and added to the input variance for the Triennial and the NWFSC shelf-slope survey indices. Estimating additional variance for the CPUE and other surveys were explored and determined to not be required.  Vessels present in the WCGOP data were bootstrapped to provide uncertainty of the total discards (Table \ref{tab:Discard}).
 
@@ -83,13 +83,13 @@ Structurally, the model assumed that the catches from each fleet were representa
 
 
 ###Alternate Models Considered
-The exploration of models began by bridging from the 2011 assessment to Stock Synthesis version 3.30.03.05, which produced no discernible difference. The updated catch series with discards added per the 2011 assessment produced insignificant differences in the relative scale of the population although the updated historical removals resulted in an increase in the estimate of unfished biomass.   Updating the survey indices produced small differences in the relative scale of the population. Adding age and length data each resulted in less of a population decline from the 1970s to pre-2000, resulting in an increase in the estimated final stock status as of `r Dat_end_mod1`.  However, the addition of new data resulted in an early pattern within recruitment, indicating that the assumptions within the previous model may not represent the best fit to the current data.
+The exploration of models began by bridging from the 2011 assessment to Stock Synthesis version 3.30.03.05, which produced no discernible difference. The updated catch series with discards added per the 2011 assessment produced insignificant differences in the relative scale of the population although the updated historical removals resulted in an increase in the estimate of unfished biomass.   Updating the survey indices produced small differences in the relative scale of the population. Adding age and length data each resulted in less of a population decline from the 1970s to pre-2000, resulting in an increase in the estimated  `r Project_firstyr` final stock status.  However, the addition of new data resulted in an early pattern within recruitment, indicating that the assumptions within the previous model may not represent the best fit to the current data.
 
-This assessment estimated discards in the model, so time was spent investigating time blocks for changes in selectivity and retention to match the limited discard data as best as possible. Using major changes in management and observed changes in landings, a set of blocks for retention was found for the bottom trawl fleets. In the spirit of parsimony, we used as few blocks as possible, allowed blocks only for time periods with data, and added new blocks when we felt they were justified by changes in management and they improved the fit to the data.  
+This assessment estimated discards in the model, so time was spent investigating time blocks for changes in selectivity and retention to match thediscard data as best as possible. Using major changes in management and observed changes in landings, a set of blocks for retention was found for the fishery fleet. In the spirit of parsimony, as few blocks as possible were used, allowed blocks only for time periods with data, and added new blocks when we felt they were justified by changes in management and they improved the fit to the data.  
 
-Natural mortality was also investigated and a new prior was developed assuming a maximum age of 100 years for females and males. The previous assessment estimated male natural mortality as an offset from female natural mortality which was fixed at the median of the 2011 prior (0.05).  This assessment attempted to estimate natural mortality for both sexes using the 2017 updated prior, but there was little to no information on natural mortality within the data and hence opted to fix the value for females.  Upon additional exploration, the model estimated very little difference in male natural mortality relative to females (< 0.002) and in the interest of selecting the model that fit the data with the fewest parameters required, males were fixed equal to the female natural mortality.
+Natural mortality was also investigated and a new prior was developed assuming a maximum age of 100 years for females and males. The previous assessment estimated male natural mortality as an offset from female natural mortality which was fixed at the median of the 2011 prior (0.05).  This assessment attempted to estimate natural mortality for both sexes using the 2017 updated prior, but there was little to no information on natural mortality within the data and hence opted to fix the value for females within the base model.  Upon additional exploration, the model estimated very little difference in male natural mortality relative to females (< 0.002) and in the interest of selecting the model that fit the data with the fewest parameters required, males were fixed equal to the female natural mortality.
 
-Finally, multiple models were investigated where steepness was either estimated, fixed at the prior, or at an alternate value. The assessment in 2011 determined that there was sufficient information concerning steepness where the parameter was estimated and then fixed at 0.40.  Based upon likelihood profiles performed on the current assessment, there was no longer support for a steepness value of 0.40 and the likelihood profile was flat across various levels of steepness with a very small improvement in likelihood (<0.50 log likelihood units) at the lowest steepness values. Estimating steepness starting at the median of the "type C" prior, the meta-analysis prior evaluated omitting information from `r spp`,  of 0.76 resulted in very little if any movement from the median value due to the flat likelihood surface across values for this parameter with final relative stock status for 2017 being estimated to > 100% of unfished biomass.  Fixing steepness at the median of the prior of 0.72 resulted in relative stock status estimates for 2017 at 98.6% of unfished biomass. It was determined that the resulting stock status estimates when steepness was fixed at the meta-analysis prior were overly optimistic and unrealistic given the biology and historical exploitation of `r spp`.   
+Finally, multiple models were investigated where steepness was either estimated, fixed at the prior, or at an alternate value. The assessment in 2011 determined that there was sufficient information concerning steepness where the parameter was estimated and then fixed at 0.40.  Based upon likelihood profiles performed on the current model, there was no longer support for a steepness value of 0.40. The likelihood profile was flat across various levels of steepness with a very small improvement in likelihood (<0.50 log likelihood units) at the lowest steepness values. Estimating steepness starting at the median of the "type C" prior, the meta-analysis prior evaluated omitting information from `r spp`,  of 0.76 resulted in very little if any movement from the median value due to the flat likelihood surface across values for this parameter with final relative stock status for 2017 being estimated to > 100% of unfished biomass.  Fixing steepness at the median of the prior of 0.72 resulted in relative stock status estimates for 2017 at 98.6% of unfished biomass. It was determined that the resulting stock status estimates when steepness was fixed at the meta-analysis prior were overly optimistic and unrealistic given the biology and historical exploitation of `r spp`.   
 
 ###Convergence
 Proper convergence was determined by starting the minimization process from dispersed values of the maximum likelihood estimates to determine if the model found a better minimum. This was repeated 100 times and a better minimum was not found (Table \ref{tab:jitter}). The model did not experience convergence issues when provided reasonable starting values. Through the jittering done as explained above and likelihood profiles, we are confident that the base case as presented represents the best fit to the data given the assumptions made. There were no difficulties in inverting the Hessian to obtain estimates of variability, although much of the early model investigation was done without attempting to estimate a Hessian.  
@@ -149,7 +149,7 @@ There are numerous types of data for which the fits are discussed: fishery CPUE 
 
 The fits the fishery CPUE and five survey indices are shown in Figure \ref{fig:index_fits}.  Extra standard error was estimated for the Triennial and NWFSC shelf-slope surveys.  The fishery CPUE and `r spp` survey index were fit well by the model.  The first two  years of the Triennial survey index, 1980 and 1983, were much higher than the later years and were poorly fit by the model.  Both the AFSC and NWFSC slope survey indices were generally flat and fit well by the model. The recent NWFSC shelf-slope survey showed a variable trend over the time period with the 2016 data point being the highest estimate of the series and given the uncertainty around each data point the model fit the model fit fell with the uncertainty interval for all years.
 
-Fits to the total observed discard amounts required time blocks (Figure \ref{fig:discard_fits}).  Fits to the trawl discards from the Pikitch data in 1985-1987 were quite good.  Discard rate change modeled over the 1992 - 2001 was based on management restrictions which were assumed to have increased discarding practices in the fishery fleet.  The next required time block was based on the WCGOP data from 2002-2007 and were fit well by the model.  Discarding increased prior to the implementation to ITQs requiring blocks for 2008 and the 2009-2010 periods.  The model fit the very low post-ITQ discard rates based on the WCGOP data well.   
+Fits to the total observed discard amounts required time blocks (Figure \ref{fig:discard_fits}).  Fits to the trawl discards from the Pikitch data in 1985-1987 were quite good.  Discard rate change modeled over the 1992 - 2001 was based on management restrictions which were assumed to have increased discarding practices in the fishery fleet.  The next required time block was based on the WCGOP data from 2002-2007 and were fit well by the model.  Discarding increased prior to the implementation to ITQs requiring blocks for 2008 and the 2009-2010 periods.  The model fit the very low post-ITQ discard rates based on the WCGOP data well.  The total estimated discard amount over time is shown in Figure \ref{fig:total_discard}. 
 
 Fits to the length data are shown based on the proportions of lengths observed by year and the Pearson residuals-at-length for all fleets.  Detailed fits to the length data by year and fleet are provided in Appendix \ref{appendix-a.-detailed-fit-to-length-composition-data}.  Aggregate fits by fleet are shown in Figure \ref{fig:length_agg}.  There are a few things that stand out when examining the aggregated length composition data. First, the sexed discard lengths appear to be poorly fit by the model but this is related to small sample sizes.  The NWFS slope survey lengths were under estimated by the model, but these data are over only two years.  Finally, both the Triennial and the NWFSC shelf-slope surveys select both young and old fish in contrast to the other data sources where typically only larger fish were observed. 
 
