--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -210,7 +210,7 @@ covered by this assessment.
 \addcontentsline{toc}{subsection}{Landings}
 
 The first year that harvest of Pacific ocean perch exceeded 1 mt off the
-US West Coast first occurred in 1918. Catches ramped up in the 1940s
+US west coast first occurred in 1918. Catches ramped up in the 1940s
 with large removals in Washington waters. During the 1950s the removals
 primary occurred in Oregon waters with catches from Washington declining
 following the 1940s. The largest removals occurring between 1966-1968
@@ -239,7 +239,7 @@ than 3.5\% based on observer data.
 \label{tab:Exec_catch}
 \begin{tabular}{l>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}}
   \hline
-Year & California & Oregon & Washington & At-sea Hake & Survey & Total Landings \\ 
+Year & California & Oregon & Washington & At-sea hake & Survey & Total Landings \\ 
   \hline
 2007 & 0.15 & 83.65 & 45.12 & 4.05 & 0.58 & 133.55 \\ 
   2008 & 0.39 & 58.64 & 16.61 & 15.93 & 0.80 & 92.36 \\ 
@@ -261,8 +261,8 @@ Year & California & Oregon & Washington & At-sea Hake & Survey & Total Landings 
 \centering
 \includegraphics{PacificOceanPerch2017_Assessment_files/figure-latex/unnamed-chunk-14-1.pdf}
 \caption{Landings of Pacific ocean perch for California, Oregon,
-Washington, the Foriegn fishery (1966-1976), At-Sea Hake fishery, and
-fishery independent surveys. \label{fig:Exec_catch1}}
+Washington, the Foriegn fishery (1966-1976), At-sea hake fishery, and
+fishery-independent surveys. \label{fig:Exec_catch1}}
 \end{figure}
 
 \FloatBarrier
@@ -331,7 +331,7 @@ A number of sources of uncertainty are explicitly included in this
 assessment. This assessment includes gender differences in growth, a
 non-linear relationship between individual spawner biomass and effective
 spawning output, and an updated relationship between length and
-maturity, based upon non-published information (M. Head, personal
+maturity, based upon non-published information (Melissa Head, personal
 communication, NOAA, NWFSC). As is always the case, overall uncertainty
 is greater than that predicted by a single model specification. Among
 other sources of uncertainty that are not included in the current model
@@ -347,13 +347,13 @@ tendency for those sources of uncertainty considered in the model.
 \addcontentsline{toc}{subsection}{Stock Biomass}
 
 The predicted spawning biomass from the base model generally showed a
-slight decline over the time series until 1966 when the foreign fleet
+slight decline over the time-series until 1966 when the foreign fleet
 began. A short, but sharp decline occurred, followed by a period of the
 stock biomass stabilizing or with a minimal decline until the late
 1990s. The stock showed increases in stock size following the year 2000
 due to a combination of strong recruitment and low catches. The 2017
 estimated spawning biomass relative to unfished equilibrium spawning
-biomass is above the target of 40\% of unfished spawning biomass is
+biomass is above the target of 40\% of unfished spawning biomass at
 76.1\% (\textasciitilde{}95\% asymptotic interval: \(\pm\)
 53.8\%-98.4\%). Approximate confidence intervals based on the asymptotic
 variance estimates show that the uncertainty in the estimated spawning
@@ -416,7 +416,7 @@ recruitments estimated within the model (in ascending order) occurred in
 \centering
 \includegraphics{r4ss/plots_mod1/ts11_Age-0_recruits_(1000s)_with_95_asymptotic_intervals.png}
 \caption{Time-series of estimated Pacific ocean perch recruitments for
-the base-case model with 95\% confidence or credibility intervals.
+the base model with 95\% confidence or credibility intervals.
 \label{fig:Recruits_all}}
 \end{figure}
 
@@ -459,11 +459,11 @@ perch were predicted to be significantly below target levels.
 
 \begin{table}[ht]
 \centering
-\caption{Recent trend in spawning potential ratio (1-$SPR$)(1-$SPR_{50\%}$) and summary exploitation rate for Pacific ocean perch.} 
+\caption{Recent trend in spawning potential ratio (1-SPR)(1-SPR50) and summary exploitation rate for Pacific ocean perch.} 
 \label{tab:SPR_Exploit_mod1}
 \begin{tabular}{l>{\centering}p{0.9in}>{\centering}p{1.2in}>{\centering}p{1.2in}>{\centering}p{1.2in}}
   \hline
-Year & (1-SPR)/(1-SPR50\%) & \~{} 95\% confidence interval & Exploitation rate & \~{} 95\% confidence interval \\ 
+Year & (1-SPR)/ (1-SPR50\%) & \~{} 95\% confidence interval & Exploitation rate & \~{} 95\% confidence interval \\ 
   \hline
 2007 & 0.104 & 0.046 - 0.162 & 0.002 & 0.001 - 0.003 \\ 
   2008 & 0.086 & 0.036 - 0.135 & 0.002 & 0.001 - 0.003 \\ 
@@ -654,7 +654,7 @@ TBD after STAR panel
 \label{tab:OFL_projection}
 \begin{tabular}{>{\raggedleft}p{0.5in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.6in}>{\centering}p{1.1in}}
   \hline
-Year & OFL & ACL & Spawning Output ( million eggs ) & Relative Biomass \\ 
+Year & OFL & ACL & Spawning Output (million eggs) & Relative Biomass \\ 
   \hline
 2017 & 4306 & 281 & 5047 & 0.761 \\ 
   2018 & 4559 & 281 & 5369 & 0.809 \\ 
@@ -941,7 +941,7 @@ overfished with the assessment estimating the spawning output below the
 management limit (25\% of virgin biomass). In reaction to the overfished
 deceleration, harvest limits were reduced relative to previous years and
 a rebuilding plan was implemented in 2001 with recent ACLs being set
-well below the estimated OFLs(Table \ref{tab:mnmgt_perform_tables}).
+well below the estimated OFLs (Table \ref{tab:mnmgt_perform_tables}).
 
 \subsection{Fisheries off Canada and
 Alaska}\label{fisheries-off-canada-and-alaska}
@@ -1002,7 +1002,7 @@ effects were included for each unique combination of vessel and year in
 the database, to account for the random selection of commercial vessels
 used during sampling (Helser et al.
 \protect\hyperlink{ref-helser_generalized_2004}{2004}, Thorson and Ward
-(\protect\hyperlink{ref-thorson_accounting_2014}{2014})). Spatial
+\protect\hyperlink{ref-thorson_accounting_2014}{2014}). Spatial
 variation was approximated using 1000 knots, and use the bias-correction
 algorithm (Thorson and Kristensen
 \protect\hyperlink{ref-thorson_implementing_2016}{2016}) in Template
@@ -1038,7 +1038,7 @@ and 2008 recruitment; with early indications of a large 2013 recruitment
 
 The effective sample sizes for length and marginal age composition data
 for all fishery-independent surveys were calculated according to Stewart
-\& Hamel (\protect\hyperlink{ref-stewart_bootstrapping_2014}{2014})
+and Hamel (\protect\hyperlink{ref-stewart_bootstrapping_2014}{2014})
 which determined that the approximate realized sample size for
 shelf/slope rockfish species was 2.43*\(N_{\text{tow}}\). The effective
 sample size of conditional-age-at-length data was set at the number of
@@ -1069,7 +1069,7 @@ majority of fish observed by this survey were aged at greater than 10
 years (Figure \ref{fig:nw_slope_Age}).
 
 The effective sample sizes for length and marginal age composition data
-were calculated according to Stewart \& Hamel
+were calculated according to Stewart and Hamel
 (\protect\hyperlink{ref-stewart_bootstrapping_2014}{2014}) described in
 Section
 \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
@@ -1106,7 +1106,7 @@ fish were between 20 and 30 cm for both females and males (Figure
 \ref{fig:afsc_Length}).
 
 The effective sample sizes for length and marginal age composition data
-were calculated according to Stewart \& Hamel
+were calculated according to Stewart and Hamel
 (\protect\hyperlink{ref-stewart_bootstrapping_2014}{2014}) described in
 Section
 \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
@@ -1136,7 +1136,7 @@ West Coast south to \(36.8^\circ\) N latitude and a depth range of
 but extended the southern range to \(34.5^\circ\) N (near Point
 Conception). From 1995 through 2004, the surveys covered the depth range
 55-500 meters and surveyed south to \(34.5^\circ\) N. In the final year
-of the Triennial series (2004), the NWFSC's Fishery Resource and
+of the Triennial series, 2004, the NWFSC's Fishery Resource and
 Monitoring division (FRAM) conducted the survey and followed very
 similar protocols as the AFSC.
 
@@ -1179,7 +1179,7 @@ large year-classes moving through the population from the 1999 and 2000
 recruitment (Figure \ref{fig:Tri_Age}).
 
 The effective sample sizes for length and marginal age composition data
-were calculated according to Stewart \& Hamel
+were calculated according to Stewart and Hamel
 (\protect\hyperlink{ref-stewart_bootstrapping_2014}{2014}) described in
 Section
 \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
@@ -1207,7 +1207,7 @@ frequencies for both years are highest between the 30-45 cm range
 fish age 40 and greater (Figure \ref{fig:POP_Age}).
 
 The effective sample sizes for length and marginal age composition data
-were calculated according to Stewart \& Hamel
+were calculated according to Stewart and Hamel
 (\protect\hyperlink{ref-stewart_bootstrapping_2014}{2014}) described in
 Section
 \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
@@ -1237,7 +1237,7 @@ A description of the methods can be found in Karnowski et al.
 (\protect\hyperlink{ref-karnowski_historical_2014}{2014}). Recent
 landings (1987-2016) were obtained from PacFIN retrieval dated May 2,
 2017, Pacific States Marine Fisheries Commission, Portland, Oregon;
-www.psmfc.org). The catch data in from the POP and POP2 categories
+www.psmfc.org. The catch data in from the POP and POP2 categories
 contained within PacFIN for Pacific ocean perch were used for this
 assessment. Additional catches from 1987-1999 for Pacific ocean perch
 under the UROCK category not yet available in PacFIN were received
@@ -1256,7 +1256,7 @@ description of the historical reconstruction methods can be found in
 \protect\hyperlink{ref-ralston_documentation_2010}{2010}). Recent
 landings (1981-2016) were obtained from PacFIN retrieval dated May 2,
 2017, Pacific States Marine Fisheries Commission, Portland, Oregon;
-www.psmfc.org).
+www.psmfc.org.
 
 \textbf{At-Sea Hake Fishery}
 
@@ -1296,7 +1296,7 @@ discards from 1985-1987 (Pikitch et al.
 southern boundaries of the study were \(48^\circ 42^\prime\) N latitude
 and \(42^\circ 60^\prime\) N. latitude respectively, which is primarily
 within the Columbia INPFC area (Pikitch et al.
-\protect\hyperlink{ref-pikitch_evaluation_1988}{1988} , Rogers and
+\protect\hyperlink{ref-pikitch_evaluation_1988}{1988}, Rogers and
 Pikitch \protect\hyperlink{ref-rogers_numerical_1992}{1992}).
 Participation in the study was voluntary and included vessels using
 bottom, midwater, and shrimp trawl gears. Observers of normal fishing
@@ -1319,11 +1319,13 @@ declined compared to pre-2011 rates. Discard rates were obtained for
 both the catch-share and the non-catch share sector for Pacific ocean
 perch. A single discard rate was calculated by weighting discard rates
 based on the commercial landings by each sector. Coefficient of
-variations were calculated by bootstrapping vessels within ports because
-the observer program randomly chooses vessels within ports to be
-observed in the non-catch shares sectors. Discard length composition for
-the trawl fleet varied by year, with larger fish being discarded prior
-to 2011 (Figure \ref{fig:WCGOP_discard}).
+variations were calculated for the non-catch shares sector and pre-catch
+share years by bootstrapping vessels within ports because the observer
+program randomly chooses vessels within ports to be observed. Post-ITQ
+all catch share boats have 100\% observer coverage and discarding is
+assumed known. Discard length composition for the trawl fleet varied by
+year, with larger fish being discarded prior to 2011 (Figure
+\ref{fig:WCGOP_discard}).
 
 \subsubsection{Historical Commercial Catch-per-unit
 effort}\label{historical-commercial-catch-per-unit-effort}
@@ -1366,20 +1368,19 @@ Input effN = $7.06 * N_{\text{trips}}$ if $N_{\text{fish}}/N_{\text{trips}}$ is 
 
 The fishery fleet observed Pacific ocean perch that were generally
 greater than 30 cm across all years of available data (Figure
-\textbackslash{}ref\{fig:Comm\_Length). The fishery fleet age data has
-clear trends of a large cohort moving through the population (Figure
-\ref{fig:Comm_Age}). Lengths and ages were also available for the At-sea
-hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and
-\ref{fig:ASHOP_Age}.
+\ref{fig:Comm_Length}). The fishery fleet age data has clear trends of a
+large cohort moving through the population (Figure \ref{fig:Comm_Age}).
+Lengths and ages were also available for the At-sea hake fishery and are
+shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}.
 
 \subsection{Biological Data}\label{biological-data}
 
-\subsubsection{Natural mortality}\label{natural-mortality}
+\subsubsection{Natural Mortality}\label{natural-mortality}
 
 Historic Pacific ocean perch ages determined using scales and surface
 reading methods of otoliths, resulted in estimates of natural mortality
 (\(M\)) of between 0.10 and 0.20yr\textsuperscript{-1} with a longevity
-less than 30 years(Gunderson
+less than 30 years (Gunderson
 \protect\hyperlink{ref-gunderson_population_1977}{1977}). Based on
 break-and-burn method of age determination using otoliths, the maximum
 age of Pacific ocean perch was revised to be 90 years (Chilton and
@@ -1406,10 +1407,10 @@ parameters across a large number of fish species, from which to develop
 an \(M\) estimator for fish species in general. They concluded by
 recommending \(M\) estimates be based on maximum age alone, based on an
 updated Hoenig non-linear least squares (nls) estimator
-\(M=4.899A_max^(-.916)\). The approach of basing \(M\) priors on maximum
-age alone was one that was already being used for West Coast rockfish
-assessments. However, in fitting the alternative model forms relating
-\(M\) to \(A_{\text{max}}\), Then et al.
+\(M=4.899A_{max}^(-.916)\). The approach of basing \(M\) priors on
+maximum age alone was one that was already being used for West Coast
+rockfish assessments. However, in fitting the alternative model forms
+relating \(M\) to \(A_{\text{max}}\), Then et al.
 (\protect\hyperlink{ref-then_evaluating_2015}{2015}) did not
 consistently apply their transformation. In particular, in real space,
 one would expect substantial heteroscedasticity in both the observation
@@ -1440,8 +1441,8 @@ The selection of 100 years was based on the range of other ages
 available with had multiple observations of fish between 90 and 102
 years of age.
 
-\subsubsection{Sex ratio, maturation, and
-fecundity}\label{sex-ratio-maturation-and-fecundity}
+\subsubsection{Sex Ratio, Maturation, and
+Fecundity}\label{sex-ratio-maturation-and-fecundity}
 
 Examining all biological data sources, the sex ratio of young fish are
 within 5\% of 1:1 by length until larger sizes which are dominated by
@@ -1472,8 +1473,8 @@ Pacific ocean perch was estimated equal to
 8.66e-10\(L\)\textsuperscript{4.98} in millions of eggs. Spawning output
 at length is shown in Figure \ref{fig:fecundity}.
 
-\subsubsection{Length-weight
-relationship}\label{length-weight-relationship}
+\subsubsection{Length-Weight
+Relationship}\label{length-weight-relationship}
 
 The length-weight relationship for Pacific ocean perch was estimated
 outside the model using all biological data available from
@@ -1483,7 +1484,7 @@ weight-at-length in grams was estimated at
 1.05e-05\(L\)\textsuperscript{3.08} where \(L\) is length in cm (Figures
 \ref{fig:Wt_len} and \ref{fig:Wt_len_pred}).
 
-\subsubsection{Growth (length-at-age)}\label{growth-length-at-age}
+\subsubsection{Growth (Length-at-Age)}\label{growth-length-at-age}
 
 The length-at-age was estimated for male and female Pacific ocean perch
 using data collected from both fishery-dependent and -independent data
@@ -1618,18 +1619,18 @@ the assessment.}
 \subsection{General Model Specifications and
 Assumptions}\label{general-model-specifications-and-assumptions}
 
-Stock Synthesis v3.30.03.05 was used to estimate the parameters in the
-model. R4SS, revision 1.27.0, along with R version 3.3.2 were used to
-investigate and plot model fits. A summary of the data sources used in
-the model (details discussed above) is shown in Figure
+Stock Synthesis version 3.30.03.05 was used to estimate the parameters
+in the model. R4SS, revision 1.27.0, along with R version 3.3.2 were
+used to investigate and plot model fits. A summary of the data sources
+used in the model (details discussed above) is shown in Figure
 \ref{fig:data_plot}.
 
 Stock Synthesis has many options when setting up a model and the
 assessment model for Pacific ocean perch was set up in the following
 manner.
 
-\subsubsection{Changes between the 2011 assessment model and current
-model}\label{changes-between-the-2011-assessment-model-and-current-model}
+\subsubsection{Changes Between the 2011 Assessment Model and Current
+Model}\label{changes-between-the-2011-assessment-model-and-current-model}
 
 The current model for Pacific ocean perch has many made many similar
 assumptions to the 2011 assessment but differs in some key ways. This
@@ -1698,12 +1699,12 @@ based on maturity-at-length where the previous estimates used in 2011
 were based on maturity-at-age (Figure \ref{fig:mat_compare}).
 
 In this assessment, the beta prior developed from a meta-analysis of
-West Coast groundfish was updated to the 2017 value (J. Thorson, pers
-comm, NWFSC, NOAA) in preliminary models, with steepness fixed at an
-alternative value in the final base model. Additionally, the prior for
-natural mortality was updated based on analysis conducted by Owen Hamel
-(personal communication, NWFSC, NOAA), where female and male natural
-mortality fixed at the prior median.
+West Coast groundfish was updated to the 2017 value (James Thorson,
+personal communication, NWFSC, NOAA) in preliminary models, with
+steepness fixed at an alternative value in the final base model.
+Additionally, the prior for natural mortality was updated based on
+analysis conducted by Owen Hamel (personal communication, NWFSC, NOAA),
+where female and male natural mortality fixed at the prior median.
 
 \subsubsection{Summary of Fleets and
 Areas}\label{summary-of-fleets-and-areas}
@@ -1828,17 +1829,19 @@ input and effective sample sizes. Length and age-at-length compositions
 from the NWFSC shelf-slope survey were fit along with length and
 marginal age compositions from the fishery and other survey fleets.
 Length data started with a sample size determined from the equation
-listed in
+listed in Sections
 \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}
-(survey data) and Section \ref{fishery-length-and-age-data} (fishery
-data). Age-at-length data assumed that each age was a random sample
-within the length bin and started with a sample size equal to the number
-of fish in that length bin. However, the 2016 NWFSC shelf-slope
-age-at-length data was variable compared to previous years for both
-males and females relative to all other years with observed fish being
-larger at age. Due to the increased variability within this data year,
-the effective sample size for this year was reduced to 50\% of the
-number of fish within each length-age bin.
+(survey data) and \ref{fishery-length-and-age-data} (fishery data).
+Age-at-length data assumed that each age was a random sample within the
+length bin and started with a sample size equal to the number of fish in
+that length bin. However, the 2016 NWFSC shelf-slope age-at-length data
+was variable compared to previous years for both males and females
+relative to all other years with observed fish being larger at age.
+Model exploration determined that the model was more sensitive than
+would be reasonably expected to the inclusion of this data year. Due to
+the increased variability within this data year and the mode's
+sensitivity, the effective sample size for this year was reduced to 50\%
+of the number of fish within each length-age bin.
 
 One extra variability parameter was estimated and added to the input
 variance for the Triennial and the NWFSC shelf-slope survey indices.
@@ -1926,20 +1929,19 @@ increase in the estimate of unfished biomass. Updating the survey
 indices produced small differences in the relative scale of the
 population. Adding age and length data each resulted in less of a
 population decline from the 1970s to pre-2000, resulting in an increase
-in the estimated final stock status as of 2016. However, the addition of
-new data resulted in an early pattern within recruitment, indicating
-that the assumptions within the previous model may not represent the
-best fit to the current data.
+in the estimated 2017 final stock status. However, the addition of new
+data resulted in an early pattern within recruitment, indicating that
+the assumptions within the previous model may not represent the best fit
+to the current data.
 
 This assessment estimated discards in the model, so time was spent
 investigating time blocks for changes in selectivity and retention to
-match the limited discard data as best as possible. Using major changes
-in management and observed changes in landings, a set of blocks for
-retention was found for the bottom trawl fleets. In the spirit of
-parsimony, we used as few blocks as possible, allowed blocks only for
-time periods with data, and added new blocks when we felt they were
-justified by changes in management and they improved the fit to the
-data.
+match thediscard data as best as possible. Using major changes in
+management and observed changes in landings, a set of blocks for
+retention was found for the fishery fleet. In the spirit of parsimony,
+as few blocks as possible were used, allowed blocks only for time
+periods with data, and added new blocks when we felt they were justified
+by changes in management and they improved the fit to the data.
 
 Natural mortality was also investigated and a new prior was developed
 assuming a maximum age of 100 years for females and males. The previous
@@ -1948,32 +1950,31 @@ natural mortality which was fixed at the median of the 2011 prior
 (0.05). This assessment attempted to estimate natural mortality for both
 sexes using the 2017 updated prior, but there was little to no
 information on natural mortality within the data and hence opted to fix
-the value for females. Upon additional exploration, the model estimated
-very little difference in male natural mortality relative to females
-(\textless{} 0.002) and in the interest of selecting the model that fit
-the data with the fewest parameters required, males were fixed equal to
-the female natural mortality.
+the value for females within the base model. Upon additional
+exploration, the model estimated very little difference in male natural
+mortality relative to females (\textless{} 0.002) and in the interest of
+selecting the model that fit the data with the fewest parameters
+required, males were fixed equal to the female natural mortality.
 
 Finally, multiple models were investigated where steepness was either
 estimated, fixed at the prior, or at an alternate value. The assessment
 in 2011 determined that there was sufficient information concerning
 steepness where the parameter was estimated and then fixed at 0.40.
-Based upon likelihood profiles performed on the current assessment,
-there was no longer support for a steepness value of 0.40 and the
-likelihood profile was flat across various levels of steepness with a
-very small improvement in likelihood (\textless{}0.50 log likelihood
-units) at the lowest steepness values. Estimating steepness starting at
-the median of the ``type C'' prior, the meta-analysis prior evaluated
-omitting information from Pacific ocean perch, of 0.76 resulted in very
-little if any movement from the median value due to the flat likelihood
-surface across values for this parameter with final relative stock
-status for 2017 being estimated to \textgreater{} 100\% of unfished
-biomass. Fixing steepness at the median of the prior of 0.72 resulted in
-relative stock status estimates for 2017 at 98.6\% of unfished biomass.
-It was determined that the resulting stock status estimates when
-steepness was fixed at the meta-analysis prior were overly optimistic
-and unrealistic given the biology and historical exploitation of Pacific
-ocean perch.
+Based upon likelihood profiles performed on the current model, there was
+no longer support for a steepness value of 0.40. The likelihood profile
+was flat across various levels of steepness with a very small
+improvement in likelihood (\textless{}0.50 log likelihood units) at the
+lowest steepness values. Estimating steepness starting at the median of
+the ``type C'' prior, the meta-analysis prior evaluated omitting
+information from Pacific ocean perch, of 0.76 resulted in very little if
+any movement from the median value due to the flat likelihood surface
+across values for this parameter with final relative stock status for
+2017 being estimated to \textgreater{} 100\% of unfished biomass. Fixing
+steepness at the median of the prior of 0.72 resulted in relative stock
+status estimates for 2017 at 98.6\% of unfished biomass. It was
+determined that the resulting stock status estimates when steepness was
+fixed at the meta-analysis prior were overly optimistic and unrealistic
+given the biology and historical exploitation of Pacific ocean perch.
 
 \subsubsection{Convergence}\label{convergence}
 
@@ -2091,6 +2092,8 @@ required time block was based on the WCGOP data from 2002-2007 and were
 fit well by the model. Discarding increased prior to the implementation
 to ITQs requiring blocks for 2008 and the 2009-2010 periods. The model
 fit the very low post-ITQ discard rates based on the WCGOP data well.
+The total estimated discard amount over time is shown in Figure
+\ref{fig:total_discard}.
 
 Fits to the length data are shown based on the proportions of lengths
 observed by year and the Pearson residuals-at-length for all fleets.
@@ -2443,12 +2446,12 @@ Washington state. Ali Whitman (ODFW), Patrick Mirrick (ODFW), and Ted
 Calavan (ODFW) provided Oregon composition data, historical catches,
 corrected PacFIN catches, and quickly uploaded age data that were
 critical to this assessment. We appreciate Vanessa Tuttle's patience and
-responsiveness to providing data. Don Pearson (NOAA) provided historical
-catch information and compiled the extensive management changes for
-Pacific ocean perch which were critical in understanding and modeling
-fishery behavior. John Wallace provided multiple last minute PacFIN
-extractions and analyzed historical discard rates for use in the
-assessment.
+responsiveness to providing data. John Filed (SWFSC) provided historical
+catch information and Don Pearson (SWFSC) compiled the extensive
+management changes for Pacific ocean perch which were critical in
+understanding and modeling fishery behavior. John Wallace provided
+multiple last minute PacFIN extractions and analyzed historical discard
+rates for use in the assessment.
 
 We are very grateful to Patrick McDonald and the team of agers at CAP
 for their hard work reading numerous otoliths and availability to answer
@@ -3223,7 +3226,7 @@ Year & Trips & Fish & Sample Size \\
 
 \begin{table}[ht]
 \centering
-\caption{Summary of At-Sea hake fishery length samples used in the stock assessment.} 
+\caption{Summary of At-sea hake fishery length samples used in the stock assessment.} 
 \label{tab:ASHOP_Lengths}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
@@ -3560,6 +3563,8 @@ Unfished spawning output (million eggs) & 6633.1 &   4736.7 -   8529.5 \\
 \end{tabular}
 \end{table}
 
+\newpage
+
 \FloatBarrier
 
 \begin{longtable}{c>{\centering}p{.5in}>{\centering}p{.65in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.5in}>{\centering}p{.60in}>{\centering}p{.45in}c}
@@ -3692,7 +3697,7 @@ Year & Total biomass (mt) & Spawning output (million eggs) & Summary biomass 3+ 
 \scalebox{0.9}{
 \begin{tabular}{l>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}}
   \hline
-Label & Base & Harmonic weights & Steepness at prior & Estimate M & Old Maturity & NA \\ 
+Label & Base & Harmonic weights & Steepness at prior & Estimate M & Old Maturity & Old Fecundity \\ 
   \hline
 Total Likelihood & 1726.16 & 2432.50 & 1726.05 & 1725.66 & 1726.17 & 1726.18 \\ 
   Survey Likelihood & -25.51 & -25.88 & -24.99 & -25.68 & -25.52 & -25.49 \\ 
@@ -4232,6 +4237,13 @@ perch. \label{fig:index_fits}}
 \end{figure}
 
 \FloatBarrier 
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/catch7 discards stacked plot (depends on multiple fleets).png}
+\caption{Estimated total discards for Pacific ocean perch.
+\label{fig:total_discard}}
+\end{figure}
 
 \begin{figure}
 \centering
