--- a/0_Executive_Summary.Rmd
+++ b/0_Executive_Summary.Rmd
@@ -7,7 +7,7 @@ through `r LastYR`.  `r spp` are most abundant in the Gulf of Alaska and have ob
 
 
 ##Landings{-}
-The first year that harvest of `r spp` exceeded 1 mt off the US West Coast first occurred in `r Dat_start_mod1`.  Catches ramped up in the 1940s with large removals in Washington waters.  During the 1950s the removals primary occurred in Oregon waters with catches from Washington declining following the 1940s. The largest removals occurring between 1966-1968 were largely a result of harvest by foreign vessels.  The fishery proceeded with more moderate removals ranging between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` to `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` metric  tons (mt) per year between 1969 and 1980. Removals generally declined from 1981 to 1994 to between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` and `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` mt per year.  `r spp` was declared overfished in 1999, resulting in large reductions in harvest in recent years since the declaration.  Since 2000, catches of `r spp` have ranged between `r paste0( min(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)), '-', max(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)) )` mt, with catches in `r Dat_end_mod1` totaling `r round(Tot.catch.df[Tot.catch.df[,1] == Dat_end_mod1,2],0)` mt.
+The first year that harvest of `r spp` exceeded 1 mt off the US west coast first occurred in `r Dat_start_mod1`.  Catches ramped up in the 1940s with large removals in Washington waters.  During the 1950s the removals primary occurred in Oregon waters with catches from Washington declining following the 1940s. The largest removals occurring between 1966-1968 were largely a result of harvest by foreign vessels.  The fishery proceeded with more moderate removals ranging between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` to `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` metric  tons (mt) per year between 1969 and 1980. Removals generally declined from 1981 to 1994 to between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` and `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` mt per year.  `r spp` was declared overfished in 1999, resulting in large reductions in harvest in recent years since the declaration.  Since 2000, catches of `r spp` have ranged between `r paste0( min(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)), '-', max(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)) )` mt, with catches in `r Dat_end_mod1` totaling `r round(Tot.catch.df[Tot.catch.df[,1] == Dat_end_mod1,2],0)` mt.
 
 `r spp` are a desirable market species and discarding has historically been low.  However, management restrictions (e.g. trip limits) have resulted in increased discarding since the early 1990s.  During the 2000s discarding increased for `r spp` due to harvest restrictions imposed to allow rebuilding, with estimated discard rates from the bottom trawl fishery peaking in 2009 and 2010 to discard rates of `r paste0(round(100*max(mod1$discard[mod1$discard$Yr ==2009, "Obs"], mod1$discard[mod1$discard$Yr ==2010, "Obs"]),1),'%')`, prior to implementation of catch shares in 2011.  Since 2011, discarding of `r spp` has been estimated to be less than `r paste0(round(100*max(mod1$discard[mod1$discard$Yr >=2011, "Obs"]),1),'%')` based on observer data.
 
@@ -47,7 +47,7 @@ The assessment uses landings data and discard-fraction estimates; catch-per-unit
 
 Although there are many types of data available for `r spp` since the 1980s, which were used in this assessment, there is little information about steepness and natural mortality. Estimates of steepness are uncertain partly because of variable recruitment. Uncertainty in natural mortality is common in many fish stock assessments even when length and age data are available. 
 
-A number of sources of uncertainty are explicitly included in this assessment. This assessment includes gender differences in growth, a non-linear relationship between individual spawner biomass and effective spawning output, and an updated relationship between length and maturity, based upon non-published information (M. Head, personal communication, NOAA, NWFSC). As is always the case, overall uncertainty is greater than that predicted by a single model specification. Among other sources of uncertainty that are not included in the current model are the degree of connectivity between the stocks of `r spp` off of Vancouver Island, British Columbia and those in PFMC waters, and the effect of climatic variables on recruitment, growth and survival of `r spp`.
+A number of sources of uncertainty are explicitly included in this assessment. This assessment includes gender differences in growth, a non-linear relationship between individual spawner biomass and effective spawning output, and an updated relationship between length and maturity, based upon non-published information (Melissa Head, personal communication, NOAA, NWFSC). As is always the case, overall uncertainty is greater than that predicted by a single model specification. Among other sources of uncertainty that are not included in the current model are the degree of connectivity between the stocks of `r spp` off of Vancouver Island, British Columbia and those in PFMC waters, and the effect of climatic variables on recruitment, growth and survival of `r spp`.
 
 A reference case was selected which adequately captures the central tendency for those sources of uncertainty considered in the model.
 
@@ -57,7 +57,7 @@ A reference case was selected which adequately captures the central tendency for
 
 
 ##Stock Biomass{-}
-The predicted spawning biomass from the base model generally showed a slight decline over the time series until 1966 when the foreign fleet began. A short, but sharp decline occurred, followed by a period of the stock biomass stabilizing or with a minimal decline until the late 1990s. The stock showed increases in stock size following the year 2000 due to a combination of strong recruitment and low catches. The `r LastYR` estimated spawning biomass relative to unfished equilibrium spawning biomass is above the target of 40% of unfished spawning biomass is `r Depl_mod1` (~95% asymptotic interval: $\pm$ `r Depl_mod1_CI`). Approximate confidence intervals based on the asymptotic variance estimates show that the uncertainty in the estimated spawning biomass is high.
+The predicted spawning biomass from the base model generally showed a slight decline over the time-series until 1966 when the foreign fleet began. A short, but sharp decline occurred, followed by a period of the stock biomass stabilizing or with a minimal decline until the late 1990s. The stock showed increases in stock size following the year 2000 due to a combination of strong recruitment and low catches. The `r LastYR` estimated spawning biomass relative to unfished equilibrium spawning biomass is above the target of 40% of unfished spawning biomass at `r Depl_mod1` (~95% asymptotic interval: $\pm$ `r Depl_mod1_CI`). Approximate confidence intervals based on the asymptotic variance estimates show that the uncertainty in the estimated spawning biomass is high.
 
 <!--BEGIN  EXECUTIVE SUMMARY SPAWNING BIOMASS AND DEPLETE TABLES AND FIGURES-->
 ```{r, results='asis'}
@@ -92,7 +92,7 @@ Recruitment deviations were estimated for the entire time-series modeled. There 
    recruit.file  = 'r4ss/plots_mod1/ts11_Age-0_recruits_(1000s)_with_95_asymptotic_intervals.png'
 ```
 
-![Time-series of estimated `r spp` recruitments for the base-case model with 95% confidence or credibility intervals. \label{fig:Recruits_all}](`r recruit.file`)
+![Time-series of estimated `r spp` recruitments for the base model with 95% confidence or credibility intervals. \label{fig:Recruits_all}](`r recruit.file`)
 
 ```{r, results='asis'}
    print(Recruit_mod1.table, include.rownames = FALSE, caption.placement = 'top')
@@ -101,7 +101,6 @@ Recruitment deviations were estimated for the entire time-series modeled. There 
 ```
 
 \FloatBarrier
-
 
 
 ##Exploitation status{-}
