--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -12,13 +12,13 @@ Data used in the `r spp` assessment are summarized in Figure \ref{fig:data_plot}
 
 The NWFSC shelf-slope survey is based on a random-grid design; covering the coastal waters from a depth of 55 m to 1,280 m [@bradburn_2003_2011]. This design uses four chartered industry vessels in most years, assigned to a roughly equal number of randomly selected grid cells. The survey, which has been conducted from late-May to early-October each year, is divided into two 2-vessel passes of the coast, which are executed from north to south. This design therefore incorporates both vessel-to-vessel differences in catchability as well as variance associated with selecting a relatively small number (approximately 700) of cells from a very large population of possible cells (greater than 11,000) distributed from the Mexican to the Canadian border. 
 
-The data from the NWFSC shelf-slope survey was analyzed using a spatio-temporal delta-model [@thorson_geostatistical_2015], implemented as an R package VAST [@thorson_comparing_2017] and publicly available online (https://github.com/James-Thorson/VAST).  Spatial and spatio-temporal variation is specifically included in both encounter probability and positive catch rates, a logit-link for encounter probability, and a log-link for positive catch rates.  Vessel-year effects were included for each unique combination of vessel and year in the database, to account for the random selection of commercial vessels used during sampling [@helser_generalized_2004, @thorson_accounting_2014].  Spatial variation was approximated using 1000 knots, and use the bias-correction algorithm [@thorson_implementing_2016] in Template Model Builder [@kristensen_tmb:_2016].  Further details regarding model structure are available in the user manual (https://github.com/James-Thorson/VAST/blob/master/examples/VAST_user_manual.pdf).  
+The data from the NWFSC shelf-slope survey was analyzed using a spatio-temporal delta-model [@thorson_geostatistical_2015], implemented as an R package VAST [@thorson_comparing_2017] and publicly available online (https://github.com/James-Thorson/VAST).  Spatial and spatio-temporal variation is specifically included in both encounter probability and positive catch rates, a logit-link for encounter probability, and a log-link for positive catch rates.  Vessel-year effects were included for each unique combination of vessel and year in the database, to account for the random selection of commercial vessels used during sampling [@helser_generalized_2004; @thorson_accounting_2014].  Spatial variation was approximated using 1000 knots, and use the bias-correction algorithm [@thorson_implementing_2016] in Template Model Builder [@kristensen_tmb:_2016].  Further details regarding model structure are available in the user manual (https://github.com/James-Thorson/VAST/blob/master/examples/VAST_user_manual.pdf).  
 
 The smallest `r spp` tend to occur in the shallower depths (< 200 m) with only larger individuals occurring at depths deeper than 300 m. Data collected by the NWFSC shelf-slope survey between depths of 55 - 549 m and north of $42^\circ$ and south of $49^\circ$ were stratified to generate an index of abundance from 2003-2016. The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year and vessel effects had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:nw_qq}).  The indices for the NWFSC shelf-slope survey show a tentative decline in the population between 2003 and 2009, with an increasing trend in biomass between the 2009 and 2016 median point estimates.
 
 Length and conditional age-at-length compositions were expanded based upon the stratification.  The number of tows with length data ranged from 33 in 2006 to 69 in 2015 (Table \ref{tab:NWcombo_Lengths}) where ages were collected for `r spp` in nearly every tow (Table \ref{tab:NWcombo_Ages}).  The expanded length frequencies from this survey show an increase in small fish starting in 2010 (Figure \ref{fig:nw_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999, 2000, and 2008 recruitment; with early indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
 
-The effective sample sizes for length and marginal age composition data for all fishery-independent surveys were calculated according to Stewart & Hamel [-@stewart_bootstrapping_2014] which determined that the approximate realized sample size for shelf/slope rockfish species was 2.43*$N_{\text{tow}}$.  The effective sample size of conditional-age-at-length data was set at the number of fish at each length by year.
+The effective sample sizes for length and marginal age composition data for all fishery-independent surveys were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] which determined that the approximate realized sample size for shelf/slope rockfish species was 2.43*$N_{\text{tow}}$.  The effective sample size of conditional-age-at-length data was set at the number of fish at each length by year.
 
 ###Northwest Fisheries Science Center (NWFSC) slope survey  
 
@@ -26,7 +26,7 @@ The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m
 
 Length and age compositions were available for 2001 and 2002 and were expanded based upon the survey stratification (Tables \ref{tab:NWslope_Lengths} and \ref{tab:NWslope_Ages}).  The expanded length frequencies from this survey shows that primarily only large fish were captured both years (Figure \ref{fig:nw_slope_Length}).  The majority of fish observed by this survey were aged at greater than 10 years (Figure \ref{fig:nw_slope_Age}).
 
-The effective sample sizes for length and marginal age composition data were calculated according to Stewart & Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
+The effective sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
 
 
 ###Alaska Fisheries Science Center (AFSC) slope survey 
@@ -37,13 +37,13 @@ An index of abundance was estimated based on the data using the VAST delta-GLMM 
 
 Length compositions were available for each year the survey was conducted.  No age data were available from this survey.  The expanded length frequencies from this survey were generally of larger fish ( > 30 cm), expect for 1997 where the highest frequency of fish were between 20 and 30 cm for both females and males (Figure \ref{fig:afsc_Length}). 
 
-The effective sample sizes for length and marginal age composition data were calculated according to Stewart & Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
+The effective sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
 
 ###Triennial Bottom Trawl Survey
 
 The Triennial survey was first conducted by the AFSC in 1977 and spanned the time-frame from 1977-2004. The survey's design and sampling methods are most recently described in [@weinberg_estimation_2002]. Its basic design was a series of equally-spaced transects from which searches for tows in a specific depth range were initiated. The survey design has changed slightly over the period of time. In general, all of the surveys were conducted in the mid-summer through early fall: the 1977 survey was conducted from early July through late September; the surveys from 1980 through 1989 ran from mid-July to late September; the 1992 survey spanned from mid-July through early October; the 1995 survey was conducted from early June to late August; the 1998 survey ran from early June through early August; and the 2001 and 2004 surveys were conducted in May-July.
 
-Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the West Coast south to $36.8^\circ$ N latitude and a depth range of 55-366 meters. The surveys in 1989 and 1992 covered the same depth range but extended the southern range to $34.5^\circ$ N (near Point Conception). From 1995 through 2004, the surveys covered the depth range 55-500 meters and surveyed south to $34.5^\circ$ N. In the final year of the Triennial series (2004), the NWFSC's Fishery Resource and Monitoring division (FRAM) conducted the survey and followed very similar protocols as the AFSC.
+Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the West Coast south to $36.8^\circ$ N latitude and a depth range of 55-366 meters. The surveys in 1989 and 1992 covered the same depth range but extended the southern range to $34.5^\circ$ N (near Point Conception). From 1995 through 2004, the surveys covered the depth range 55-500 meters and surveyed south to $34.5^\circ$ N. In the final year of the Triennial series, 2004, the NWFSC's Fishery Resource and Monitoring division (FRAM) conducted the survey and followed very similar protocols as the AFSC.
 
 Given the different depths surveyed during 1977, the data from that year were not included in this assessment. Water hauls [@zimmermann_influence_2003] and tows located in Canadian waters were also excluded from the analysis of this survey. The data was examined for varying distribution of length and/or ages of fish based upon the shift in survey timing and little evidence was found of ontogenetic shifts in `r spp` during the summer months. `r spp` are rarely encountered south of $40^\circ$ where the change in southern range of the survey would have no impact on data collected regarding `r spp`. Given these factors the Triennial survey was analyzed as a single time-series, a departure from how the previous assessment which split the time-series into and an  early (1980-1992) and a late period (1995-2004).  
 
@@ -51,7 +51,7 @@ An index of abundance was estimated based on the data using the VAST delta-GLMM 
 
 Length and age compositions were expanded based upon the stratification.  The number of tows with length data ranged from 17 in 1986 to 81 in 1998 (Table \ref{tab:TriennialLengths}).  Ages were read using surface reading methods until 1989 when the break-and-burn method replaced surface reads as the best method to age `r spp`.  Unfortunately, surface reading of `r spp` otoliths results in significant underestimates of age.  Due to this, these otoliths were excluded from analysis.  The available ages from the Triennial survey and the number of tows where otoliths were collected are shown in Table \ref{tab:Triennial_Ages}.  The expanded length frequencies from this survey show an increase in small fish starting in 1995 (Figure \ref{fig:Tri_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999 and 2000 recruitment (Figure \ref{fig:Tri_Age}).
 
-The effective sample sizes for length and marginal age composition data were calculated according to Stewart & Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
+The effective sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
 
 ###Pacific ocean perch Survey
 
@@ -59,7 +59,7 @@ A survey designed to sample `r spp` was conducted in 1979 and again in 1985 (for
 
 Length and age compositions were expanded based on the stratification. The survey had 125 and 126 `r spp` tows (Table \ref{tab:POP_Lengths}) and ages were only available in 1985 due to surface reads for the 1979 data (Table \ref{tab:POP_Ages}). The length frequencies for both years are highest between the 30-45 cm range (Figure \ref{fig:POP_Length}) with ages in 1985 having a large number of fish age 40 and greater (Figure \ref{fig:POP_Age}).
 
-The effective sample sizes for length and marginal age composition data were calculated according to Stewart & Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
+The effective sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
 
 
 <!-- ********************************************************************** -->
@@ -75,11 +75,11 @@ Historical commercial fishery landings of `r spp` from Washington for the years 
 
 **Oregon**
 
-Historical commercial fishery landings of `r spp` from Oregon for the years 1892-1986 were obtained from Alison Dauble (ODFW). A description of the methods can be found in Karnowski et al. [-@karnowski_historical_2014]. Recent landings (1987-2016) were obtained from PacFIN retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).  The catch data in from the POP and POP2 categories contained within PacFIN for `r spp` were used for this assessment.  Additional catches from 1987-1999 for `r spp` under the UROCK category not yet available in PacFIN were received directly from the state and combined with the catch data available for that period within PacFIN (Patrick Mirrick, personal communication, ODFW).
+Historical commercial fishery landings of `r spp` from Oregon for the years 1892-1986 were obtained from Alison Dauble (ODFW). A description of the methods can be found in Karnowski et al. [-@karnowski_historical_2014]. Recent landings (1987-2016) were obtained from PacFIN retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org.  The catch data in from the POP and POP2 categories contained within PacFIN for `r spp` were used for this assessment.  Additional catches from 1987-1999 for `r spp` under the UROCK category not yet available in PacFIN were received directly from the state and combined with the catch data available for that period within PacFIN (Patrick Mirrick, personal communication, ODFW).
 
 **California**
 
-Historical commercial fishery landings of `r spp` were obtained directly from John Field at the SWFSC due to database issues for the historical period for the  California Cooperative Groundfish Survey, also known as CALCOM (128.114.3.187) for the years 1916-1980. A description of the historical reconstruction methods can be found in [@ralston_documentation_2010]. Recent landings  (1981-2016) were obtained from PacFIN retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
+Historical commercial fishery landings of `r spp` were obtained directly from John Field at the SWFSC due to database issues for the historical period for the  California Cooperative Groundfish Survey, also known as CALCOM (128.114.3.187) for the years 1916-1980. A description of the historical reconstruction methods can be found in [@ralston_documentation_2010]. Recent landings  (1981-2016) were obtained from PacFIN retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org.
 
 **At-Sea Hake Fishery**
 
@@ -91,9 +91,9 @@ From the 1960s through the early 1970s, foreign trawling enterprises harvested c
 
 ###Discards
 
-Data on discards of `r spp` are available from two different data sources.  The earliest source is referred to as the Pikitch data and comes from a study organized by Ellen Pikitch that collected trawl discards from 1985-1987 [@pikitch_evaluation_1988].  The northern and southern boundaries of the study were $48^\circ 42^\prime$ N latitude and $42^\circ 60^\prime$ N. latitude respectively, which is primarily within the Columbia INPFC area [@pikitch_evaluation_1988 ; @rogers_numerical_1992].  Participation in the study was voluntary and included vessels using bottom, midwater, and shrimp trawl gears.  Observers of normal fishing operations on commercial vessels collected the data, estimated the total weight of the catch by tow and recorded the weight of species retained and discarded in the sample.  Results of the Pikitch data were obtained from John Wallace (personal communication, NWFSC, NOAA) in the form of ratios of discard weight to retained weight of `r spp` and sex-specific length frequencies.  Discard estimates are shown in Table \ref{tab:Discard}.   
+Data on discards of `r spp` are available from two different data sources.  The earliest source is referred to as the Pikitch data and comes from a study organized by Ellen Pikitch that collected trawl discards from 1985-1987 [@pikitch_evaluation_1988].  The northern and southern boundaries of the study were $48^\circ 42^\prime$ N latitude and $42^\circ 60^\prime$ N. latitude respectively, which is primarily within the Columbia INPFC area [@pikitch_evaluation_1988; @rogers_numerical_1992].  Participation in the study was voluntary and included vessels using bottom, midwater, and shrimp trawl gears.  Observers of normal fishing operations on commercial vessels collected the data, estimated the total weight of the catch by tow and recorded the weight of species retained and discarded in the sample.  Results of the Pikitch data were obtained from John Wallace (personal communication, NWFSC, NOAA) in the form of ratios of discard weight to retained weight of `r spp` and sex-specific length frequencies.  Discard estimates are shown in Table \ref{tab:Discard}.   
 
-The second source is from the West Coast Groundfish Observer Program (WCGOP).  This program is part of the NWFSC and has been recording discard observations since 2003. Table \ref{tab:Discard} shows the discard ratios (discarded/(discarded + retained)) of `r spp` from WCGOP.  Since 2011, when the trawl rationalization program was implemented, observer coverage rates increased to nearly 100% for all the limited entry trawl vessels in the program and discard rates declined compared to pre-2011 rates.  Discard rates were obtained for both the catch-share and the non-catch share sector for `r spp`.  A single discard rate was calculated by weighting discard rates based on the commercial landings by each sector.  Coefficient of variations were calculated by bootstrapping vessels within ports because the observer program randomly chooses vessels within ports to be observed in the non-catch shares sectors.  Discard length composition for the trawl fleet varied by year, with larger fish being discarded prior to 2011 (Figure \ref{fig:WCGOP_discard}).
+The second source is from the West Coast Groundfish Observer Program (WCGOP).  This program is part of the NWFSC and has been recording discard observations since 2003. Table \ref{tab:Discard} shows the discard ratios (discarded/(discarded + retained)) of `r spp` from WCGOP.  Since 2011, when the trawl rationalization program was implemented, observer coverage rates increased to nearly 100% for all the limited entry trawl vessels in the program and discard rates declined compared to pre-2011 rates.  Discard rates were obtained for both the catch-share and the non-catch share sector for `r spp`.  A single discard rate was calculated by weighting discard rates based on the commercial landings by each sector.  Coefficient of variations were calculated for the non-catch shares sector and pre-catch share years by bootstrapping vessels within ports because the observer program randomly chooses vessels within ports to be observed. Post-ITQ all catch share boats have 100% observer coverage and discarding is assumed known.  Discard length composition for the trawl fleet varied by year, with larger fish being discarded prior to 2011 (Figure \ref{fig:WCGOP_discard}).
  
 
 ###Historical Commercial Catch-per-unit effort
@@ -111,17 +111,17 @@ Input effN = $7.06 * N_{\text{trips}}$ if $N_{\text{fish}}/N_{\text{trips}}$ is 
 
 \end{centering}
 
-The fishery fleet observed `r spp` that were generally greater than 30 cm across all years of available data (Figure \ref{fig:Comm_Length). The fishery fleet age data has clear trends of a large cohort moving through the population (Figure \ref{fig:Comm_Age}). Lengths and ages were also available for the At-sea hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}. 
+The fishery fleet observed `r spp` that were generally greater than 30 cm across all years of available data (Figure \ref{fig:Comm_Length}). The fishery fleet age data has clear trends of a large cohort moving through the population (Figure \ref{fig:Comm_Age}). Lengths and ages were also available for the At-sea hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}. 
 
 <!--************BIOLOGICAL DATA*********************************************-->
 ##Biological Data
 
-###Natural mortality
+###Natural Mortality
 
 Historic `r spp` ages determined using scales and surface reading methods of otoliths, resulted in estimates of natural mortality ($M$) of between 0.10 and 0.20yr^-1^ with a longevity
-less than 30 years[@gunderson_population_1977].  Based on break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural mortality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life history correlates (including Hoenig's method, Gunderson gonadosomatic index [-@gunderson_trade-off_1997], and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  
+less than 30 years [@gunderson_population_1977].  Based on break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural mortality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life history correlates (including Hoenig's method, Gunderson gonadosomatic index [-@gunderson_trade-off_1997], and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  
 
-Hamel [-@hamel_method_2015] developed a method for combining meta-analytic approaches relating the natural mortality rate $M$ to other life-history parameters such as longevity, size, growth rate and reproductive effort, to provide a prior on $M$. In that same issue of ICESJMS, Then et al. [-@then_evaluating_2015], provided an updated data set of estimates of $M$ and related life history parameters across a large number of fish species, from which to develop an $M$ estimator for fish species in general. They concluded by recommending $M$ estimates be based on maximum age alone, based on an updated Hoenig non-linear least squares (nls) estimator $M=4.899A_max^(-.916)$. The approach of basing $M$ priors on maximum age alone was one that was already being used for West Coast rockfish assessments. However, in fitting the alternative model forms relating $M$ to $A_{\text{max}}$, Then et al. [-@then_evaluating_2015] did not consistently apply their transformation. In particular, in real space, one would expect substantial heteroscedasticity in both the observation and process error associated with the observed relationship of $M$ to $A_{\text{max}}$. Therefore, it would be reasonable to fit all models under a log transformation. This was not done. Re-evaluating the data used in Then et al. [-@then_evaluating_2015] by fitting the one-parameter $A_{\text{max}}$ model under a log-log transformation (such that the slope is forced to be -1 in the transformed space [@hamel_method_2015]), the point estimate for $M$ is:
+Hamel [-@hamel_method_2015] developed a method for combining meta-analytic approaches relating the natural mortality rate $M$ to other life-history parameters such as longevity, size, growth rate and reproductive effort, to provide a prior on $M$. In that same issue of ICESJMS, Then et al. [-@then_evaluating_2015], provided an updated data set of estimates of $M$ and related life history parameters across a large number of fish species, from which to develop an $M$ estimator for fish species in general. They concluded by recommending $M$ estimates be based on maximum age alone, based on an updated Hoenig non-linear least squares (nls) estimator $M=4.899A_{max}^(-.916)$. The approach of basing $M$ priors on maximum age alone was one that was already being used for West Coast rockfish assessments. However, in fitting the alternative model forms relating $M$ to $A_{\text{max}}$, Then et al. [-@then_evaluating_2015] did not consistently apply their transformation. In particular, in real space, one would expect substantial heteroscedasticity in both the observation and process error associated with the observed relationship of $M$ to $A_{\text{max}}$. Therefore, it would be reasonable to fit all models under a log transformation. This was not done. Re-evaluating the data used in Then et al. [-@then_evaluating_2015] by fitting the one-parameter $A_{\text{max}}$ model under a log-log transformation (such that the slope is forced to be -1 in the transformed space [@hamel_method_2015]), the point estimate for $M$ is:
 
 \begin{centering}
 
@@ -132,19 +132,19 @@ $M=\frac{5.4}{A_{\text{max}}}$
 The above is also the median of the prior. The prior is defined as a lognormal with mean $ln(\frac{5.4}{A_{\text{max}}})$ and SE = 0.438. Using a maximum age of 100 the point estimate and median of the prior is 0.054.  The maximum age was selected based on available age data from all West Coast data sources.  The oldest aged rockfish was 120 years, captured by the commercial fishery in 2007.  However, age data are subject to ageing error which could impact this estimate of longevity.  The selection of 100 years was based on the range of other ages available with had multiple observations of fish between 90 and 102 years of age.      
 
 
-###Sex ratio, maturation, and fecundity
+###Sex Ratio, Maturation, and Fecundity
 
 Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by length until larger sizes which are dominated by females who reach a larger maximum size relative to males (Figure \ref{fig:sexratio}), with the sex ratio being approximately equal across ages (Figure \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at birth was assumed to be 1:1.  This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [-@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity, an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (Melissa Head, personal communication, NWFSC, NOAA).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to 1.0 for larger fish (Figure \ref{fig:mat}).  Comparison between the maturity-at-age used in the previous assessment and the updated functional maturity-at-length is shown in Figure \ref{fig:mat_compare}.
 
 The fecundity-at-age has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r format(mod1$MGparmAdj$Eggs_scalar_Fem[1], scientific = TRUE)`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs. Spawning output at length is shown in Figure \ref{fig:fecundity}.
 
 
-###Length-weight relationship
+###Length-Weight Relationship
 
 The length-weight relationship for `r spp` was estimated outside the model using all biological data available from fishery-dependent and -independent data sources where the female weight-at-length in grams was estimated at `r format(mod1$MGparmAdj$Wtlen_1_Fem[1], scientific = TRUE)`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Fem[1],2)`^ and males at `r format(mod1$MGparmAdj$Wtlen_1_Mal[1], scientific = TRUE)`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Mal[1], 2)`^ where $L$ is length in cm (Figures \ref{fig:Wt_len} and \ref{fig:Wt_len_pred}).
 
 
-###Growth (length-at-age)
+###Growth (Length-at-Age)
 
 The length-at-age was estimated for male and female `r spp` using data collected from both fishery-dependent and -independent data sources that were collected from 1981-2016. Figure \ref{fig:Len_Age} shows the lengths and ages for all years and all data as well as predicted von Bertalanffy fits to the data. Females grow larger than males and sex specific growth parameters were estimated at the following values:
 
